Improved interface and functionality

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css" />
+    <link href="http://fonts.cdnfonts.com/css/quicksand" rel="stylesheet">
     <title>Unit Converter</title>
   </head>
 
@@ -12,6 +13,7 @@
     <div class="card">
       <header class="header">
         <h1>Metric/Imperial Unit Converter</h1>
+        <label for=" enter a number of your choice">Number Here->:</label>
         <input id="number-input" >
         <button id="convert-btn">CONVERT</button>
       </header>
